fix stats group dialog vertical spacing
- corrected nesting in layout code
- removed extra vertical padding for all small dialogs

Reviewed-on: http://review.couchbase.org/112176
Tested-by: Rob Ashcom <rob.ashcom@gmail.com>

--- a/priv/public/ui/app/css/cbui-components.css
+++ b/priv/public/ui/app/css/cbui-components.css
@@ -747,9 +747,6 @@ section.error {
 .dialog-small {
   width: 380px;
 }
-.dialog-small .panel-content {
-  padding: 1.5rem 1rem 1rem 1rem;
-}
 .dialog-small .panel-footer {
   border: 0;
   padding: 0 1rem 1rem 1rem;
